# umap-autoencoder

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: synthetic.ipynb  umap-autoencoder-celeba.ipynb  umap-autoencoder-fashion-mnist.ipynb  umap-autoencoder-mnist.ipynb  umap-autoencoder.ipynb  umap-clustering-mnist.ipynb  umap-inverse-transform-fashion-mnist.ipynb  umap-outlier-detection-mnist.ipynb  umap-synthetic-data-generation.ipynb
scripts/: celeba_clean_background.py  compute_umap_on_images.py  train_celeba_autoencoders.py
utils/: autoencoder.py  data.py  loss.py  train_functions.py  umap.py
